--- a/Day32/backend/app/templates/product_list.html
+++ b/Day32/backend/app/templates/product_list.html
@@ -23,7 +23,7 @@
                     <td>IPhone X</td>
                     <td>10500000 đ</td>
                 </tr>
-            </tobdy>
+            </tbody>
         </table>
     </div>
     <a class="btn btn-primary" href='#'>Thêm sản phẩm</a>
