--- a/Day32/backend/app/templates/product_list.html
+++ b/Day32/backend/app/templates/product_list.html
@@ -2,12 +2,15 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 <div class="mt-3 container">
-    <input 
-        class="mb-3 form-control" 
-        id="keyword" 
-        onkeyup="search()" 
-        placeholder='Nhập tên sản phẩm để tìm'
-    />
+    <form>
+        <input 
+            class="mb-3 form-control" 
+            name="keyword" 
+            onkeyup="search()" 
+            placeholder='Nhập tên sản phẩm để tìm'
+            value='{{keyword}}'
+        />
+    </form>
     <div id="app">
         <table class="table table-bordered">
             <thead>
