--- a/Day34/backend/app/templates/list_customer.html
+++ b/Day34/backend/app/templates/list_customer.html
@@ -1,10 +1,28 @@
 <meta charset="utf-8">
-<h3>Danh sách khách hàng</h3>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+<!--
 <ul>
     {% for customer in customer_list %}
         <li>{{customer.name}}</li>
     {% endfor %}
-</ul>
-<table>
-    <!--TODO-->
-</table>
+</ul>-->
+<div class="container mt-3">
+    <h3>Danh sách khách hàng</h3>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Họ và tên</th>
+                <th>Số điện thoại</th>
+                <th>Địa chỉ</th>
+            </tr>
+            {% for customer in customer_list %}
+                <tr>
+                    <td>{{ customer.name }}</td>
+                    <td>{{ customer.phone  }}</td>
+                    <td>{{ customer.address }}</td>
+                </tr>
+            {% endfor %}
+        </thead>
+    </table>
+</div>
