--- a/Day34/backend/app/templates/product_detail.html
+++ b/Day34/backend/app/templates/product_detail.html
@@ -27,8 +27,8 @@
             </tr>
           </tbody>
         </table>
-        <a href='index.html' class="btn btn-secondary">Quay lại</a>
-        <a href='product_order.html' class="btn btn-primary">Mua hàng</a>
+        <a href='/' class="btn btn-secondary">Quay lại</a>
+        <a href='#' class="btn btn-primary">Mua hàng</a>
       </div>
     </div>
   </div>
