--- a/Day34/backend/app/templates/index.html
+++ b/Day34/backend/app/templates/index.html
@@ -35,11 +35,11 @@
         <div class="row">
           {% for product in product_list %}
             <div class="col-4" style="padding-bottom: 50px;">
-              <a href='product_detail.html'>
-                <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
+              <a href='/view-product/{{product.id}}'>
+                <img width="100%" src='{{product.image.url}}'/>
                 <div style="position: absolute;bottom: 0;">
-                  <p class="mb-1">Acer 001</p>
-                  <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
+                  <p class="mb-1">{{product.name}}</p>
+                  <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>{{product.price}} ₫</b> </p>
                 </div>
               </a>
             </div>
